@@ -1,0 +1,25 @@
+/*
+Copyright (c) 2019 Roger Light <roger@atchoo.org>
+
+All rights reserved. This program and the accompanying materials
+are made available under the terms of the Eclipse Public License v1.0
+and Eclipse Distribution License v1.0 which accompany this distribution.
+ 
+The Eclipse Public License is available at
+   http://www.eclipse.org/legal/epl-v10.html
+and the Eclipse Distribution License is available at
+  http://www.eclipse.org/org/documents/edl-v10.php.
+ 
+Contributors:
+   Roger Light - initial implementation and documentation.
+*/
+
+#ifndef SUB_CLIENT_OUTPUT_H
+#define SUB_CLIENT_OUTPUT_H
+
+#include "mosquitto.h"
+#include "client_shared.h"
+
+void print_message(struct mosq_config *cfg, const struct mosquitto_message *message, const mosquitto_property *properties);
+
+#endif
